--- a/home-feed.html
+++ b/home-feed.html
@@ -75,6 +75,10 @@
         </div>
         <div class="mx-auto col-lg-7 col-xl-8">
             <div id="posts" class="rounded-3 mb-3">
+                <div class="d-flex row text-center pt-5">
+                    <img class="mx-auto col-2 mb-3" src="./images/loading-gif-rocket1.png" alt="">
+                    <p class="mx-auto text-primary">Loading posts...</p>
+                </div>
             </div>
         </div>
     </main>
