--- a/profile.html
+++ b/profile.html
@@ -78,6 +78,10 @@
             </div>
         </div>
         <div id="profile-posts" class="mx-auto col-lg-7 col-xl-8">
+            <div class="d-flex row text-center pt-5">
+                <img class="mx-auto col-2 mb-3" src="./images/loading-gif-rocket1.png" alt="">
+                <p class="mx-auto text-primary">Loading posts...</p>
+            </div>
         </div>
     </main>
     
