--- a/view-post.html
+++ b/view-post.html
@@ -55,6 +55,10 @@
     <main class="p-3 row col-10 col-md-8 col-lg-6 mx-auto">
         <div class="mx-auto">
             <div id="post" class="rounded-3 mb-3">
+                <div class="d-flex row text-center pt-5">
+                    <img class="mx-auto col-2 mb-3" src="./images/loading-gif-rocket1.png" alt="">
+                    <p class="mx-auto text-primary">Loading post...</p>
+                </div>
             </div>
         </div>
     </main>
