validere på noroff email

--- a/register-account.html
+++ b/register-account.html
@@ -19,7 +19,7 @@
             <h1 class="text-primary display-1">YELLO</h1>
         </a>
     </header>
-    <main class="container col-8 col-md-6 col-lg-4 mx-auto">
+    <main class="container col-8 col-md-6 col-lg-4 mx-auto pb-5">
         <div>
             <p id="error-msg" class="text-center"></p>
             <form id="reg-form" action="./index.html" class="text-center">
