--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p class="text-primary">Connect with</p>
         <h1 class="text-primary display-1">YELLO</h1>
     </header>
-    <main class="container col-8 col-md-6 col-lg-4 mx-auto">
+    <main class="container col-8 col-md-6 col-lg-4 mx-auto pb-5">
         <div>
             <form id="login-form" action="home-feed.html" class="text-center">
                 <p class="text-warning justify-content-start" id="login-email-msg"></p>
