--- a/profile.html
+++ b/profile.html
@@ -87,7 +87,7 @@
     
     <div class="modal fade" id="conModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-            <div class="modal-content">
+            <div class="modal-content p-4">
                 <div class="modal-header border-0">
                     <h2 class="modal-title text-primary" id="exampleModalLabel">Fellow yelloers</h2>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
