--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <input type="email" id="login-email" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Email address" required>
                 <p class="text-warning justify-content-start" id="login-password-msg"></p>
                 <input id="login-password" type="password" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Password" required>
-                <button id="login-submit" type="submit" class="btn btn-primary col-6 mb-4 text-secondary rounded-pill nowrap">Log in</button>
+                <button id="login-submit" type="submit" class="btn btn-primary col-12 col-sm-6 mb-4 text-secondary rounded-pill nowrap">Log in</button>
             </form>
             <p class="text-center text-primary mt-5">or <a href="./register-account.html" class="link-primary">create account.</a></p>
         </div> 
