--- a/register-account.html
+++ b/register-account.html
@@ -29,7 +29,7 @@
                 <input type="email" id="reg-email" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Email address" required>
                 <p class="text-warning justify-content-start" id="reg-password-msg"></p>
                 <input type="password" id="reg-password" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Password" required>
-                <button type="submit" id="reg-submit" class="btn btn-primary col-6 mb-4 text-secondary rounded-pill nowrap">Create account</button>
+                <button type="submit" id="reg-submit" class="btn btn-primary col-12 col-sm-6 mb-4 text-secondary rounded-pill nowrap">Create account</button>
             </form>
             <p class="text-center text-primary mt-5">or <a href="./index.html" class="link-primary">log in.</a></p>
         </div> 
