--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <main class="container col-8 col-md-6 col-lg-4 mx-auto pb-5">
         <div>
             <form id="login-form" action="home-feed.html" class="text-center">
-                <p class="text-warning justify-content-start" id="login-email-msg"></p>
+                <p class="text-primary justify-content-start" id="login-email-msg"></p>
                 <input type="email" id="login-email" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Email address" required>
-                <p class="text-warning justify-content-start" id="login-password-msg"></p>
+                <p class="text-primary justify-content-start" id="login-password-msg"></p>
                 <input id="login-password" type="password" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Password" required>
                 <button id="login-submit" type="submit" class="btn btn-primary col-12 col-sm-6 mb-4 text-secondary rounded-pill nowrap">Log in</button>
             </form>
