--- a/register-account.html
+++ b/register-account.html
@@ -23,11 +23,11 @@
         <div>
             <p id="error-msg" class="text-center"></p>
             <form id="reg-form" action="./index.html" class="text-center">
-                <p class="text-warning justify-content-start" id="reg-username-msg"></p>
+                <p class="text-primary justify-content-start" id="reg-username-msg"></p>
                 <input type="text" id="reg-username" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Username" required>
-                <p class="text-warning justify-content-start" id="reg-email-msg"></p>
+                <p class="text-primary justify-content-start" id="reg-email-msg"></p>
                 <input type="email" id="reg-email" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Email address" required>
-                <p class="text-warning justify-content-start" id="reg-password-msg"></p>
+                <p class="text-primary justify-content-start" id="reg-password-msg"></p>
                 <input type="password" id="reg-password" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Password" required>
                 <button type="submit" id="reg-submit" class="btn btn-primary col-12 col-sm-6 mb-4 text-secondary rounded-pill nowrap">Create account</button>
             </form>
