--- a/edit-post.html
+++ b/edit-post.html
@@ -66,7 +66,7 @@
                 <textarea id="edit-title" class="rounded-3 border-0 p-2 ps-4 mx-auto col-12 bg-light mb-4" type="text"></textarea>
                 <textarea id="edit-content" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light pb-5 mb-4"
                     type="text-area"></textarea>
-                <textarea id="edit-media" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light mb-4" type="text"
+                <textarea id="edit-media" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-sm-6 col-12 bg-light mb-4" type="text"
                     placeholder="Place image URL"></textarea>
                 <button id="submit-edit" type="submit"
                     class="btn btn-primary mb-3 col-12 col-sm-6 col-lg-8 text-secondary rounded-pill mx-auto">Publish changes</button>
